[package]
name = "portfolio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Local
bindings = {path = "out/bindings"}

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# Cli
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.163", features= ["derive"]}
serde_derive = "1.0.180"

# External
tokio = { version = "1.28.1", features = ["macros", "full"] }
ethers = { version = "2.0.4", default-features = false, features = ["abigen", "ws", "rustls"] }
statrs = "0.16.0"

# Utils
anyhow = "1.0.72"
colored = "2.0.4"
chrono = "0.4.26"

# Alloy
alloy-dyn-abi = "0.1.0"
alloy-json-abi = "0.1.0"
alloy-primitives = "0.2.0"
alloy-rlp = "0.2.0"
alloy-rlp-derive = "0.2.0"
alloy-sol-macro = "0.2.0"
alloy-sol-types = "0.2.0"
hex-literal = "0.4.1"
dotenv = "0.15.0"

